<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_marginTop="36dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/mallard"
                />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/pup_up_window_duck_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_up_window_duck_name"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            app:layout_constraintTop_toTopOf="@+id/cardView2"
            android:layout_marginLeft="10dp"
            style="@style/TitleTextStyle"
            />

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toTopOf="@+id/pup_up_window_duck_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pop_up_window_duck_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/pop_up_window_duck_description_title"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            style="@style/TitleTextStyle"
            />

        <TextView
            android:id="@+id/pop_up_window_duck_description_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_up_window_duck_description_subtitle"
            app:layout_constraintStart_toStartOf="@+id/pop_up_window_duck_description_title"
            app:layout_constraintTop_toBottomOf="@+id/pop_up_window_duck_description_title"
            style="@style/defaultTextStyle"
            />

        <TextView
            android:id="@+id/pop_up_window_duck_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_up_window_duck_type_title"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="@+id/pop_up_window_duck_description_subtitle"
            app:layout_constraintTop_toBottomOf="@+id/pop_up_window_duck_description_subtitle"
            style="@style/TitleTextStyle"/>

        <TextView
            android:id="@+id/pop_up_window_duck_type_subtitle"
            style="@style/defaultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_up_window_duck_type_subtitle"
            app:layout_constraintStart_toStartOf="@+id/pop_up_window_duck_type_title"
            app:layout_constraintTop_toBottomOf="@+id/pop_up_window_duck_type_title" />


        <TextView
            android:id="@+id/pop_up_window_duck_latin_title"
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"

            android:text="@string/pop_up_window_duck_latin_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pop_up_window_duck_type_subtitle" />

        <TextView
            android:id="@+id/pop_up_window_duck_latin_subtitle"
            style="@style/defaultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_up_window_duck_latin_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pop_up_window_duck_latin_title" />

        <TextView
            android:id="@+id/pop_up_window_duck_length_title"
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/pop_up_window_duck_length_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pop_up_window_duck_latin_subtitle" />

        <TextView
            android:id="@+id/pop_up_window_duck_length_subtitle"
            style="@style/defaultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_up_window_duck_length_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pop_up_window_duck_length_title" />

        <TextView
            android:id="@+id/pop_up_window_duck_weight_title"
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/pop_up_window_duck_weight_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pop_up_window_duck_length_subtitle" />

        <TextView
            android:id="@+id/pop_up_window_duck_weight_subtitle"
            style="@style/defaultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_up_window_duck_weight_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pop_up_window_duck_weight_title" />

        <TextView
            android:id="@+id/pop_up_window_duck_egg_title"
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/pop_up_window_duck_egg_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pop_up_window_duck_weight_subtitle" />

        <TextView
            android:id="@+id/pop_up_window_duck_egg_subtitle"
            style="@style/defaultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_up_window_duck_egg_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pop_up_window_duck_egg_title" />

        <View
            android:id="@+id/view_separation"
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pop_up_window_duck_egg_subtitle" />

        <ImageView
            android:id="@+id/delete_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_trash"
            app:layout_constraintBottom_toBottomOf="@+id/view_separation"
            app:layout_constraintEnd_toStartOf="@+id/view_separation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_separation" />

        <ImageView
            android:id="@+id/star_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_unstar"
            app:layout_constraintBottom_toBottomOf="@+id/view_separation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view_separation"
            app:layout_constraintTop_toTopOf="@+id/view_separation" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>